Update admin reference

--- a/catalog/templates/login.html
+++ b/catalog/templates/login.html
@@ -33,7 +33,7 @@ Indy1200 | login
 
 </div>
 
-<a href="http://127.0.0.1:8000/admin/" target="_blank">
+<a href="https://golfapp1dev.herokuapp.com/admin/" target="_blank">
 <div class="bigShadow" id="adminButton">
   <img id="loginSettings" src="{% static 'icons/loginSettingsBlue.svg'%}">
 </div></a>
