Updated CSS for mobile

--- a/catalog/templates/baseGolfApp.html
+++ b/catalog/templates/baseGolfApp.html
@@ -44,33 +44,11 @@
     </div>
 
 
-  <div class="yellowBackground" id="footer">
+<!--  <div class="yellowBackground" id="footer">
     <div class="mobileContainer" id="footerContentContainer">
 
-    </div></div>
+    </div></div> -->
 
-
-
-    <div id="dynamicPageName">
-  {% block pageName %}
-
-  {% endblock %}
-
-    </div>
-  </div>
-
-  <div id="superContentContainer">
-
-  {% block pageContent %}
-
-
-  {% endblock %}
-  </div>
-    </div>
-
-  </div>
-
-  </div>
 
   </body>
   </html>
