Update with basic leaderboard structure

--- a/catalog/templates/baseGolfApp.html
+++ b/catalog/templates/baseGolfApp.html
@@ -29,7 +29,7 @@
     <div class="mobileContainer" id="headerContentContainer">
 
         <a href="{% url 'landingpage'%}"><div class="navIconContainer"><img class="navIconImage" src="{% static 'icons/navHomeBlue.svg' %}"></div></a>
-        <!--Update--><a href="{% url 'scoringpage'%}"><div class="navIconContainer"><img class="navIconImage" id="leaderboardIcon" src="{% static 'icons/navLeaderboardBlue.svg' %}"></div></a>
+        <!--Update--><a href="{% url 'fullleaderboard' %}"><div class="navIconContainer"><img class="navIconImage" id="leaderboardIcon" src="{% static 'icons/navLeaderboardBlue.svg' %}"></div></a>
         <a href="{% url 'scoringpage'%}"><div class="navIconContainer"><img class="navIconImage" id="scoreIcon" src="{% static 'icons/navScoresBlue.svg' %}"></div></a>
         <!--Update--><a href="{% url 'scoringpage'%}"><div class="navIconContainer"><img class="navIconImage" src="{% static 'icons/navEventsBlue.svg' %}"></div></a>
         <a href="{% url 'login'%}"><div class="navIconContainer"><img class="navIconImage" src="{% static 'icons/navExitBlue.svg' %}"></div></a>
