--- a/catalog/templates/landingPage.html
+++ b/catalog/templates/landingPage.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 {% load static %}
+<a href="{% url 'fullleaderboard' %}">
 <div class="bigShadow landingpageButton" id="landingpageButtonLeaderboard">
   <div id="landingpageIconContainer"><img class="landingIconImage" src="{% static 'icons/navLeaderboardWhite.svg' %}"></div>
   <div class="bold bigText whiteText" id="landingpageTextContainer">Leaderboard</div>
-  </div>
+</div></a>
 <a href="{% url 'scoringpage'%}">
   <div class="bigShadow landingpageButton" id="landingpageButtonScores">
   <div id="landingpageIconContainer"><img class="landingIconImage" src="{% static 'icons/navScoresWhite.svg' %}"></div>
