--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -787,6 +787,7 @@ input[type=number]::-webkit-outer-spin-button {
   color: white; /*BLUE #051864 */
   display: inline-block;
   margin: 2px auto;
+  -webkit-appearance: none;
 }
 
 #id_ld {
