--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -788,6 +788,7 @@ input[type=number]::-webkit-outer-spin-button {
   display: inline-block;
   margin: 2px auto;
   -webkit-appearance: none;
+  border: 0;
 }
 
 #id_ld {
