--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -800,6 +800,8 @@ input[type=number]::-webkit-outer-spin-button {
   color: white; /*BLUE #051864 */
   display: inline-block;
   margin: 2px auto;
+  -webkit-appearance: none;
+  border: 0;
 }
 
 #scoreScrollContainer {
