--- a/catalog/templates/scoringPage.html
+++ b/catalog/templates/scoringPage.html
@@ -35,10 +35,11 @@
     <div class="bold bigText whiteText" id="scorespageTextContainer">Top Golf</div>
   </div>
 
+  <a href="{% url 'entersocial'%}">
   <div class="bigShadow scorepageButton" id="scorespageButtonSocial">
     <div id="scorespageIconContainer"><img class="scoresIconImage" src="{% static 'icons/scoresSocialWhite.svg' %}"></div>
     <div class="bold bigText whiteText" id="scorespageTextContainer">Social</div>
-  </div>
+  </div></a>
 
 
 </div>
