--- a/catalog/templates/baseGolfApp.html
+++ b/catalog/templates/baseGolfApp.html
@@ -16,8 +16,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% load static from staticfiles %}
-<link rel="stylesheet" href="{% static 'css/styles.css' %}" type="text/css"> <!--ORIGINAL {% static 'css/styles.css' %}-->
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <link rel="icon"
     type="image/png"
     href="{% static 'styles.css' %}">
@@ -29,9 +29,9 @@
     <div class="mobileContainer" id="headerContentContainer">
 
         <a href="{% url 'landingpage'%}"><div class="navIconContainer"><img class="navIconImage" src="{% static 'icons/navHomeBlue.svg' %}"></div></a>
-        <!--Update--><a href="{% url 'fullleaderboard' %}"><div class="navIconContainer"><img class="navIconImage" id="leaderboardIcon" src="{% static 'icons/navLeaderboardBlue.svg' %}"></div></a>
+        <a href="{% url 'fullleaderboard'%}"><div class="navIconContainer"><img class="navIconImage" id="leaderboardIcon" src="{% static 'icons/navLeaderboardBlue.svg' %}"></div></a>
         <a href="{% url 'scoringpage'%}"><div class="navIconContainer"><img class="navIconImage" id="scoreIcon" src="{% static 'icons/navScoresBlue.svg' %}"></div></a>
-        <!--Update--><a href="{% url 'scoringpage'%}"><div class="navIconContainer"><img class="navIconImage" src="{% static 'icons/navEventsBlue.svg' %}"></div></a>
+        <a href="{% url 'tourdetails'%}"><div class="navIconContainer"><img class="navIconImage" src="{% static 'icons/navEventsBlue.svg' %}"></div></a>
         <a href="{% url 'login'%}"><div class="navIconContainer"><img class="navIconImage" src="{% static 'icons/navExitBlue.svg' %}"></div></a>
 
     </div></div>
@@ -42,13 +42,3 @@
 {% endblock %}
 
     </div>
-
-
-<!--  <div class="yellowBackground" id="footer">
-    <div class="mobileContainer" id="footerContentContainer">
-
-    </div></div> -->
-
-
-  </body>
-  </html>
