--- a/catalog/templates/landingPage.html
+++ b/catalog/templates/landingPage.html
@@ -12,10 +12,11 @@
   <div id="landingpageIconContainer"><img class="landingIconImage" src="{% static 'icons/navScoresWhite.svg' %}"></div>
   <div class="bold bigText whiteText" id="landingpageTextContainer">Enter Scores</div>
 </div></a>
+<a href="{% url 'tourdetails'%}">
 <div class="bigShadow landingpageButton" id="landingpageButtonDetails">
   <div id="landingpageIconContainer"><img class="landingIconImage" src="{% static 'icons/navEventsWhite.svg' %}"></div>
   <div class="bold bigText whiteText" id="landingpageTextContainer">Tour details</div>
-  </div>
+</div></a>
 
 
 {% endblock %}
