--- a/catalog/templates/login.html
+++ b/catalog/templates/login.html
@@ -6,9 +6,10 @@
 Indy1200 | login
 </title>
 
-  <link rel="icon"
-      type="image/png"
-      href="">
+<link rel="icon"
+    type="image/png"
+    href="https://static1.squarespace.com/static/582341fa9f7456df6245bfc3/t/5c4f856b0e2e72cc51579f43/1548715388714/_chequeredFlagBlue.png?format=1000w">
+<link href="https://fonts.googleapis.com/css?family=Racing+Sans+One" rel="stylesheet">
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,17 +23,28 @@ Indy1200 | login
 </head>
 
 <body>
-  
-<div class="yellowBorder" id="loginContainer">
-  <div class = "blueText" id="loginText"> Welcome to the official site of the</div>
-  <div class="" id="loginIndy"></div>
-  <div id="loginEnter">
-    <div id="loginPassword">Password</div>
-    <a href="{% url 'landingpage' %}">
-    <div class ="blueBackground" id="loginButton">Enter</div></a>
+<div class="" id="loginContainer">
+  <div class="indyText blueText yellowBackground" id="loginHeader">
+    Welcome to the official site of
+    </div>
+  <div class="indyText blueText" id="loginBody">
+    <div id="loginIconContainer">
+    <img id="loginIcon" src="{% static 'icons/tourdetailsFlagBlue.svg' %}"></div>
+    <div class="indyText blueText" id="loginTextContainer">The Indy<span id="loginTextContainer" class="indyText yellowText">1200</span></div>
+    <div id="loginAuthContainer">Player auth here</div>
   </div>
 
-</div>
+  <div class="yellowBackground" id="loginFooter">
+      <a href="{% url 'landingpage' %}">
+    <div class="indyText yellowText blueBackground" id="entryButton">Click to enter</div></a>
+
+
+
+  </div>
+
+
+
+  </div>
 
 <a href="https://golfapp1dev.herokuapp.com/admin/" target="_blank">
 <div class="bigShadow" id="adminButton">
